--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: helvetica-w01-roman, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -13,6 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  font-size: 2.5em;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+  display: block;
+  font-size: 1.2em;
+  line-height: 1.5em;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -21,13 +33,19 @@ a {
 a:hover {
   color: #535bf2;
 }
+input {
+  margin: 1em 0;
+  font-size: 1em;
+  padding: 0.6em 1.2em;
+  border-radius: 8px;
+  border: 2px solid;
+}
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
