--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -13,11 +13,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  font-size: 2.5em;
-  margin: 0;
-}
-
 p {
   margin: 0;
   display: block;
@@ -33,6 +28,7 @@ a {
 a:hover {
   color: #535bf2;
 }
+
 input {
   margin: 1em 0;
   font-size: 1em;
@@ -41,31 +37,18 @@ input {
   border: 2px solid;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 2px solid;
+  padding: 0.5rem 2rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #020313;
 }
 button:focus,
 button:focus-visible {
