--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -17,25 +17,31 @@ h1 {
   width: auto;
 }
 
-/* Stack columns on small screens */
-@media (max-width: 768px) {
-  .wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-  .input-wrapper,
-  .output-wrapper {
-    width: 100%;
-    margin-top: 1rem;
-  }
-}
-
 .input-wrapper {
   margin-top: 8rem;
 }
 
 .output-wrapper {
   margin-top: 6rem;
+}
+
+/* Stack columns on small screens */
+@media (max-width: 768px) {
+  .wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .input-wrapper,
+  .output-wrapper {
+    width: 100%;
+  }
+  .input-wrapper {
+    margin-top: 3rem;
+  }
+  .output-wrapper {
+    margin-top: 2rem;
+  }
 }
 
 .weather-card {
@@ -89,7 +95,7 @@ h1 {
   padding: 1rem;
   border: 2px solid black;
   border-radius: 1rem;
-  width: 30vw;
+  width: 60vw;
   height: 25vh;
   display: flex;
   flex-direction: column;
